--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-body{
-	background-color:pink;
-	}
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: pink;
+}
+.container a {
+  text-decoration: none;
+  color: purple;
+  display: block;
+}
