--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,19 @@ body {
 .singlePrice:hover .tooltip-singlePrice {
   visibility: visible;
 }
+.tooltip-todo-list {
+  background-image: url("images/todo-list.png");
+}
+.todo-list:hover .tooltip-todo-list {
+  visibility: visible;
+}
+.tooltip-jobListings {
+  background-image: url("images/jobListings.png");
+}
+.jobListings:hover .tooltip-jobListings {
+  visibility: visible;
+}
+
 @media (min-width: 700px) {
   .tooltip > span {
     height: 15rem;
