--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   box-sizing: border-box;
   color: teal;
   background-color: pink;
-  font-family: "Shadows Into Light", cursive;
+  font-family: "Julius Sans One", cursive;
 }
 .container {
   width: 80%;
