--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: teal;
+  color: #d9355c;
   background-color: pink;
-  font-family: "Julius Sans One", cursive;
+  font-family: "Comic Sans MS;
 }
 .container {
   width: 80%;
@@ -161,8 +161,19 @@ body {
 .productPage:hover .tooltip-productPage {
   visibility: visible;
 }
+.footer{
+color: #795548;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-around;
+}
+
 
 @media (min-width: 700px) {
+   .footer{
+    flex-direction:row;
+  }
   .tooltip > span {
     height: 15rem;
     width: 20rem;
