--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ footer a{
 }
 .cc-color-override--167202574 .cc-btn{
     color:#4a6743 !important;
-    font-family:'Mali', 'Helvetica';
+    font-family:'Helvetica';
 }
 .cc-window{
     border-top:2px solid #aec295;
