--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
     font-family: "Sunnysfont";
     src: url('../fonts/Sunnysfontstyle-Regular.ttf');
 }
+@font-face {
+    font-family: "Pixelfont";
+    src: url('../fonts/Pixelfont.ttf');
+}
 body{
     height:100%;
     width: 100%;
@@ -24,7 +28,7 @@ body{
     background-image: url("../images/TitleImg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    font-family: "Sunnysfont";
+    font-family: "Pixelfont";
     font-size: 2rem;
     width: 100%;
     height:100%;
@@ -171,7 +175,7 @@ body{
     100% { top: 20%;}
 }
 .startBtn{
-    font-family: "Sunnysfont";
+    font-family: "Pixelfont";
     font-size: 0.8rem;
     color: rgb(40, 82, 41);
     padding: 0.5rem 1rem;
@@ -215,7 +219,7 @@ body{
     font-size: 1rem;
 }
 .about-container{
-    font-family: "Sunnysfont";
+    font-family: "Pixelfont";
     font-size:1.5rem;
     text-transform: uppercase;   
 }
@@ -237,7 +241,7 @@ body{
     justify-content:space-between;
 }
 .about-top p{
-    font-family:'Papyrus', Comis Sans, Tahoma, sans-serif;
+    font-family:'Pixelfont', Comis Sans, Tahoma, sans-serif;
 }
 .about-container .btn-row, .contact-container .btn-row{
     display: flex;
@@ -355,7 +359,7 @@ body{
     text-decoration: none;
 }
 nav{
-    font-family:'Sunnysfont', sans-serif;
+    font-family:'Pixelfont', sans-serif;
     display:flex;
     flex-direction:column;
     justify-content:space-between;
