--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ body{
     color:#dadaa3;
     font-size:2rem;
     font-variant:small-caps;
-    font-family:'Sunnysfont', sans-serif;
+    font-family:'Pixelfont', sans-serif;
     margin-left:2rem;
     letter-spacing: 3px;
     text-decoration: none;
