--- a/css/styles.css
+++ b/css/styles.css
@@ -410,7 +410,7 @@ footer{
     align-items: center;   
     padding-bottom:1rem;   
     width: 100%;    
-    border-top: 2px solid #557064;
+   /* border-top: 2px solid #557064;*/
 }
 
 footer a{
