--- a/css/styles.css
+++ b/css/styles.css
@@ -209,13 +209,10 @@ body{
     justify-content: space-between;
     align-items: center;  
 }
-.contact-container{
-    font-family: Pixelfont;
-    font-size: 1rem;
-}
-.about-container{
+
+.about-container, .contact-container{
     font-family: "Pixelfont";
-    font-size:1.5rem;
+    font-size:1rem;
     text-transform: uppercase;   
 }
 .about-content{
@@ -252,7 +249,7 @@ body{
     box-shadow: 2px 2px 2px #707b51;
     margin-bottom:1rem;
     text-align: center;
-    width: 50%;
+    width: 70%;
 }
 .about-container .btn:hover, .contact-container .btn:hover{
     color:#fffcb3;
@@ -268,7 +265,7 @@ body{
 /*contact*/
 .contactInfo{
     text-transform: lowercase;
-    color:#707b51;
+    color:#bd8e75;
     text-decoration: none;
 }
 /*java projects*/
@@ -486,6 +483,7 @@ footer a{
         padding: 6rem;   
     }
     .about-container, .contact-container{
+        font-size: 1.5rem;
         padding-top: 15rem;
         min-height: 100vh;
     }
